[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/summon_card.png" type="Texture" id=1]
[ext_resource path="res://sprites/summon_card_disabled.png" type="Texture" id=2]
[ext_resource path="res://scenes/SummonBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/summon_card_pressed.png" type="Texture" id=4]
[ext_resource path="res://scripts/SummonCard.gd" type="Script" id=5]
[ext_resource path="res://fonts/Micro_Chat.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://fonts/Outward_Bound.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 5
extra_spacing_top = -3
extra_spacing_bottom = -2
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 5
outline_size = 1
extra_spacing_top = -3
extra_spacing_bottom = -2
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 7
outline_size = 1
outline_color = Color( 0.282353, 0.419608, 0.498039, 1 )
font_data = ExtResource( 7 )

[node name="SummonCard" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -35.0
margin_right = 8.0
margin_bottom = 3.0
rect_min_size = Vector2( 32, 43 )
size_flags_horizontal = 5
size_flags_vertical = 5
script = ExtResource( 5 )

[node name="CardData" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Label" type="Label" parent="CardData"]
margin_right = 32.0
margin_bottom = 5.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
text = "AAAAA"
align = 1
valign = 1

[node name="Button" type="TextureButton" parent="CardData"]
margin_top = 5.0
margin_right = 32.0
margin_bottom = 37.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="SummonBar" parent="CardData" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 37.0
margin_right = 32.0
margin_bottom = 43.0
size_flags_horizontal = 3

[node name="ManaCost" type="Label" parent="CardData/SummonBar"]
anchor_left = 0.5
anchor_top = -1.0
anchor_right = 0.5
anchor_bottom = -1.0
margin_left = -16.0
margin_right = 16.0
margin_bottom = 5.0
grow_vertical = 0
custom_colors/font_color = Color( 0.478431, 0.611765, 0.588235, 1 )
custom_fonts/font = SubResource( 2 )
text = "00/10"
align = 1
valign = 1

[node name="Shortcut" type="Label" parent="."]
margin_top = 3.0
margin_right = 9.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 3 )
text = "0"
